--- a/modules/ROOT/partials/deployment/apache_full_example.adoc
+++ b/modules/ROOT/partials/deployment/apache_full_example.adoc
@@ -22,8 +22,8 @@
     SSLProxyCheckPeerName off
     SSLProxyCheckPeerExpire off
 
-    ProxyPass / https://localhost:{ocis_port}/
-    ProxyPassReverse / https://localhost:{ocis_port}/
+    ProxyPass / http://localhost:{ocis_port}/
+    ProxyPassReverse / http://localhost:{ocis_port}/
 
     #important, otherwise 400 errors from idp
     ProxyPreserveHost on
