--- a/modules/ROOT/pages/maintenance/commands/rolling-back-and-forward.adoc
+++ b/modules/ROOT/pages/maintenance/commands/rolling-back-and-forward.adoc
@@ -1,6 +1,6 @@
 = Roll Back / Roll Forward Decomposedfs Migrations
 
-WARNING: Use this command with absolute care. It is not intended to play around and should only be used on request and supervision of ownCloud support. 
+WARNING: Use this command with absolute care. It is not intended to play around and should only be used on request and under supervision of ownCloud support. 
 
 It is important to disable clients and users logging in while any migration is in progress. To do so, start Infinite Scale with only two necessary services. The example uses the binary as base:
 
